# picoclock

./: .gitignore  README.md
3d/: button-2.3.stl  button.scad  button.stl  case.scad  common.scad  front.scad  front.stl  panel.scad  panel.stl
3d-mini/: button.scad  button_shortbase.scad  case.scad  common.scad  picoclock_scaled.xcf  screen_holder.scad
3d-mini/prod/v1/: case-front.stl  case-pcb.stl  case-screenholder.stl
3d-mini/prod/v10/: button_shortbase.stl  case-front.stl  case.stl  screen_holder.stl
3d-mini/prod/v11/: case-back.stl  screen_holder.stl
3d-mini/prod/v12/: screen_holder.stl
3d-mini/prod/v13/: screen_holder-3.stl  screen_holder.stl
3d-mini/prod/v2/: case-back.stl  case-front.stl  case-screenholder.stl  pcb.stl
3d-mini/prod/v3/: case-back.stl  case-front.stl  pcb.stl  screenholder.stl
3d-mini/prod/v4/: case-back.stl
3d-mini/prod/v5/: case-back.stl  case-front.stl
3d-mini/prod/v6/: case-back.stl  case-front.stl
3d-mini/prod/v7/: button.stl  case-back.stl  case-front.stl
3d-mini/prod/v8/: case-back.stl
3d-mini/prod/v9/: button.stl  button_shortbase.stl  case-back.stl
3d/front-v1/: front.stl
3d/panel-v1/: panel.scad  panel.stl
3d/prod1/: button-2.4.stl  button-2.5.stl  case.stl  case_v2.stl
3d/prod2/: case.stl
api/: clock.php
fw/icons/: 2024-08-15_anais.xcf  2024-08-15_leftarrow.xcf  2024-08-15_light.xcf  2024-08-15_rightarrow.xcf  2024-08-15_wifi.xcf  conv.py
fw/rtos/: CMakeLists.txt  README.md
fw/rtos/platform/raspberry-pico-w/: CMakeLists.txt  button_debounce.c  pico_hal_wrapper.c  pwm_sound.c  pwm_sound.h  pwm_sound_melodies.h  wifi.c  wifi.h
fw/rtos/system/: alarms.c  alarms.h  audio_player.c  debug.c  filesystem.c  fs_task.c  main.c  main.h  net_task.c  net_task.h  ost_hal.h  qor.c  ui_task.c  ui_task.h  utils.c
fw/src/: CMakeLists.txt  README.md  pt.json  pt.uf2
fw/src/boards/: pico2_picoclock.h
fw/src/core/: wifi.c  wifi.h
fw/src/esp32/: README.md  esp32.ino
fw/src/system/: alarms.c  audio_player.c  audio_player.h  ff_diskio_sdcard.c  filesystem.c  filesystem.h  fs_task.c  fs_task.h  fw.c  fw.h  main.c  main.h  net_task.c  net_task.h  sdcard.c  system.h  ui_task.c  ui_task.h  utils.c  utils.h
fw/src/system/ff/: ff.c  ffconf.h
pcb/: MCP4652.bak  MCP4652.kicad_sym  epaper-driver.kicad_sch  picoclock.kicad_pcb  picoclock.kicad_prl  picoclock.kicad_pro  picoclock.kicad_sch  sym-lib-table
pcb-mini/: RM2.kicad_sch  SJ2-35863B1-SMT-TR.kicad_sym  SOP65P780X200-20N.kicad_mod  audio.kicad_sch  epaper-driver.kicad_sch  esp32.kicad_sch  fp-info-cache  fp-lib-table  picoclock.kicad_pcb  picoclock.kicad_prl  picoclock.kicad_pro  picoclock.kicad_sch  senseair_S8.kicad_sym  sym-lib-table  uC.kicad_sch
pcb-mini/CYW43439/4L/: CYW43439.kicad_pcb  CYW43439.kicad_sch  fp-info-cache
pcb-mini/CYW43439/4L/gerbers/: CYW43439-B_Cu.gbr  CYW43439-B_Silkscreen.gbr  CYW43439-F_Paste.gbr  CYW43439-In1_Cu.gbr  CYW43439-In2_Cu.gbr  CYW43439-job.gbrjob
pcb-mini/SJ2-35863B1-SMT-TR.pretty/: CUI_SJ2-35863B1-SMT-TR.kicad_mod
pcb-mini/clock.pretty/: RPi_Pico_SMD_TH.kicad_mod  SW_SPST_TL3301TG.kicad_mod  microSD_HC_Hirose_DM3AT-SF-PEJM5_combined_MSD-4-A.kicad_mod
pcb/CYW43439/: CYW43439.kicad_pcb  CYW43439.kicad_prl  CYW43439.kicad_pro  CYW43439.kicad_sch
pcb/CYW43439-2L/: CYW43439.kicad_pcb  sym-lib-table
pcb/CYW43439-2L/CYW43439.pretty/: BGA63N40P7X12_287X487X55N.kicad_mod
pcb/CYW43439-4L/: CYW43439.kicad_pcb  CYW43439.kicad_pcb.bkp-via-size  CYW43439.kicad_sch
pcb/CYW43439/2L/: CYW43439.csv  CYW43439.kicad_pro  CYW43439.kicad_sch  CYW43439KUBGT.kicad_sym  fp-info-cache  fp-lib-table
pcb/CYW43439/2L/gerbers/: CYW43439-B_Cu.gbr  CYW43439-B_Mask.gbr  CYW43439-B_Paste.gbr  CYW43439-B_Silkscreen.gbr  CYW43439-Edge_Cuts.gbr  CYW43439-F_Silkscreen.gbr  CYW43439-NPTH.drl  CYW43439-job.gbrjob
pcb/CYW43439/2L/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
pcb/CYW43439/4L/: CYW43439.kicad_pcb  CYW43439.kicad_prl  CYW43439.kicad_pro  CYW43439.kicad_sch
pcb/CYW43439/4L/CYW43439.pretty/: Antenna_Switcher.kicad_mod
pcb/CYW43439/4L/gerbers/: CYW43439-B_Mask.gbr  CYW43439-B_Paste.gbr  CYW43439-Edge_Cuts.gbr  CYW43439-F_Cu.gbr  CYW43439-F_Mask.gbr  CYW43439-F_Paste.gbr  CYW43439-F_Silkscreen.gbr  CYW43439-NPTH.drl  CYW43439-PTH.drl
pcb/CYW43439/4L/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
pcb/clock.pretty/: microSD_HC_Hirose_DM3AT-SF-PEJM5_combined_MSD-4-A.kicad_mod
pcb/epaper-driver/: #auto_saved_files#  _autosave-epaper-driver.kicad_sch  epaper-driver.kicad_pcb  epaper-driver.kicad_prl  epaper-driver.kicad_pro  epaper-driver.kicad_sch
pcb/frontpanel/: frontpanel.kicad_pcb  frontpanel.kicad_prl  frontpanel.kicad_pro  frontpanel.kicad_sch
pcb/frontpanel/capybara.pretty/: capybara.kicad_mod
pcb/old/: MCP23009-E_SS.kicad_sym  MCP4652.bak
pcb/rev2/: picoclock.kicad_pcb  picoclock.kicad_pro  picoclock.kicad_sch
